# xvrlang-treesitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
