[package]
name = "tree-sitter-xvrlang"
description = "tree sitter for xvr language"
version = "0.1.0"
authors = ["arfy slowy <slowy.arfy@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "xvrlang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/wargaslowy/xvrlang-treesitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
